--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@neondatabase/serverless": "^1.0.1",
     "@netlify/plugin-nextjs": "^5.13.3",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-dialog": "^1.1.15",
