Fix linting errors for Google OAuth integration
- Fixed unused import warnings
- Fixed TypeScript any type usage
- Renamed signIn imports to avoid conflicts
- All linting errors resolved

--- a/env.example
+++ b/env.example
@@ -1,9 +1,13 @@
 # Database
 DATABASE_URL="postgresql://username:password@localhost:5432/rumered"
 
-# StackAuth
-STACKAUTH_API_KEY="your_stackauth_api_key"
-STACKAUTH_ISSUER="your_stackauth_issuer"
+# NextAuth
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-secret-key-here"
+
+# Google OAuth
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
 
 # App
 NEXT_PUBLIC_SITE_URL="http://localhost:3000"
