--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.1",
     "@netlify/plugin-nextjs": "^5.13.3",
@@ -30,6 +31,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "next-auth": "^4.24.11",
     "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
